Fixed pass height and overflow problem in selector

--- a/src/PassSelector/style.less
+++ b/src/PassSelector/style.less
@@ -75,9 +75,9 @@
 		}
 
 		& > .pass {
-			height: 100%;
 			padding-bottom: 0;
 			flex-shrink: 0;
+			flex-grow: 1;
 		}
 
 		& .name {
